--- a/eje.html
+++ b/eje.html
@@ -217,21 +217,21 @@ object-fit: cover;
         <section>
             <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
             <ul>
-    <li> <font color="#9900FF"> Higiene y limpieza:</font> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li>
+    <li> <br> <font color="#000000"> Higiene y limpieza:</font> </br>Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm1.jpg" alt="BPM">
 			</div>	
 		</div>    
-    <li> <font color="#000000"> </br>Control de calidad:</font>  Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
-    <li> <font color="#000000"> </br> Seguridad del producto:</font>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
-    <li> <font color="#000000"> </br> Trazabilidad:</font>  Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
-    <li> <font color="#000000"> </br> Capacitación del personal:</font>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
-    <li> <font color="#000000"> </br> Almacenamiento adecuado:</font>  Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
-    <li> <font color="#000000"> </br> Etiquetado:</font>  Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
-    <li> <font color="#000000"> </br> Documentación:</font> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
-    <li> <font color="#000000"> </br> Manejo de residuos:</font>  Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
-    <li> <font color="#000000"> Mejora continua:</font>  Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
+    <li> <br> <font color="#000000">  Control de calidad:</font> </br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
+    <li> <br> <font color="#000000">  Seguridad del producto:</font> </br> Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
+    <li> <br> <font color="#000000">  Trazabilidad:</font> </br> Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
+    <li> <br> <font color="#000000">  Capacitación del personal:</font> </br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
+    <li> <br> <font color="#000000">  Almacenamiento adecuado:</font> </br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
+    <li> <br> <font color="#000000">  Etiquetado:</font> </br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
+    <li> <br> <font color="#000000">  Documentación:</font> </br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
+    <li> <br> <font color="#000000">  Manejo de residuos:</font> </br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
+    <li> <br> <font color="#000000">  Mejora continua:</font> </br>  Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
 		<div style="text-align: center;">	
 			<div class="imge">
  			<img src="b2.jpg" alt="BPM">
