--- a/eje.html
+++ b/eje.html
@@ -217,21 +217,21 @@ object-fit: cover;
         <section>
             <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
             <ul>
-    <li> <strong color="#fff"> Higiene y limpieza:</strong> <br><br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li>
+    <li> <strong color="#fff"> Higiene y limpieza:</strong> <br><br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm1.jpg" alt="BPM">
 			</div>	
 		</div>    
-    <li>  <strong color="#fff">  Control de calidad:</strong> <br><br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
-    <li>  <strong color="#fff">  Seguridad del producto:</strong> <br><br>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
-    <li>  <strong color="#fff">  Trazabilidad:</strong> <br><br> Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
-    <li>  <strong color="#fff">  Capacitación del personal:</strong> <br><br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
-    <li>  <strong color="#fff">  Almacenamiento adecuado:</strong> <br><br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
-    <li>  <strong color="#fff">  Etiquetado:</strong> <br><br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
-    <li>  <strong color="#fff">  Documentación:</strong> <br><br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
-    <li>  <strong color="#fff">  Manejo de residuos:</strong> <br><br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
-    <li>  <strong color="#fff">  Mejora continua:</strong> <br><br> Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
+    <li>  <strong color="#fff">  Control de calidad:</strong> <br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li><br>
+    <li>  <strong color="#fff">  Seguridad del producto:</strong> <br>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li><br>
+    <li>  <strong color="#fff">  Trazabilidad:</strong> <br> Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li><br>
+    <li>  <strong color="#fff">  Capacitación del personal:</strong> <br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li><br>
+    <li>  <strong color="#fff">  Almacenamiento adecuado:</strong> <br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li><br>
+    <li>  <strong color="#fff">  Etiquetado:</strong> <br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li><br>
+    <li>  <strong color="#fff">  Documentación:</strong> <br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li><br>
+    <li>  <strong color="#fff">  Manejo de residuos:</strong> <br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li><br>
+    <li>  <strong color="#fff">  Mejora continua:</strong> <br> Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li><br>
 		<div style="text-align: center;">	
 			<div class="imge">
  			<img src="b2.jpg" alt="BPM">
