--- a/eje.html
+++ b/eje.html
@@ -222,15 +222,64 @@ object-fit: cover;
 			<div class="imge">
  			<img src="bpm1.jpg" alt="BPM">
 			</div>	
-		</div>    
+		</div>
+<br>    
     <li>  <strong color="#fff">  Control de calidad:</strong> <br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li><br>
+    <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>   
     <li>  <strong color="#fff">  Seguridad del producto:</strong> <br>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li><br>
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>       
     <li>  <strong color="#fff">  Trazabilidad:</strong> <br> Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li><br>
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>       
     <li>  <strong color="#fff">  Capacitación del personal:</strong> <br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li><br>
+   <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>   
     <li>  <strong color="#fff">  Almacenamiento adecuado:</strong> <br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li><br>
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>       
     <li>  <strong color="#fff">  Etiquetado:</strong> <br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li><br>
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>     
     <li>  <strong color="#fff">  Documentación:</strong> <br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li><br>
+  <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>    
     <li>  <strong color="#fff">  Manejo de residuos:</strong> <br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li><br>
+ <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>
+<br>      
     <li>  <strong color="#fff">  Mejora continua:</strong> <br> Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li><br>
 		<div style="text-align: center;">	
 			<div class="imge">
