--- a/eje.html
+++ b/eje.html
@@ -217,7 +217,7 @@ object-fit: cover;
         <section>
             <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
             <ul>
-    <li> <strong color="#fff"> Higiene y limpieza:</strong> <br><br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
+    <li> <strong color="#fff"> Higiene y limpieza:</strong> <br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm1.jpg" alt="BPM">
