--- a/eje.html
+++ b/eje.html
@@ -225,21 +225,21 @@ object-fit: cover;
         <section>
             <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
             <ul>
-    <li> <strong color="#fff"> Higiene y limpieza:</strong> <br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
+    <li> <strong color="#000000"> Higiene y limpieza:</strong> <br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm1.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>    
-    <li>  <strong color="#fff">  Control de calidad:</strong> <br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li><br>
+    <li>  <strong color="#000000">  Control de calidad:</strong> <br> Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li><br>
     <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm2.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>   
-    <li>  <strong color="#fff">  Seguridad del producto:</strong> <br>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li><br>
+    <li>  <strong color="#0000000">  Seguridad del producto:</strong> <br>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm3.jpg" alt="BPM">
@@ -253,42 +253,42 @@ object-fit: cover;
 			</div>	
 		</div>
 <br>       
-    <li>  <strong color="#fff">  Capacitación del personal:</strong> <br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li><br>
+    <li>  <strong color="#000000">  Capacitación del personal:</strong> <br>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li><br>
    <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm5.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>   
-    <li>  <strong color="#fff">  Almacenamiento adecuado:</strong> <br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li><br>
+    <li>  <strong color="#000000">  Almacenamiento adecuado:</strong> <br> Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm6.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>       
-    <li>  <strong color="#fff">  Etiquetado:</strong> <br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li><br>
+    <li>  <strong color="#000000">  Etiquetado:</strong> <br> Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li><br>
 <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm7.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>     
-    <li>  <strong color="#fff">  Documentación:</strong> <br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li><br>
+    <li>  <strong color="#000000">  Documentación:</strong> <br> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li><br>
   <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm8.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>    
-    <li>  <strong color="#fff">  Manejo de residuos:</strong> <br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li><br>
+    <li>  <strong color="#000000">  Manejo de residuos:</strong> <br> Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li><br>
  <div style="text-align: center;">	
 			<div class="imge">
  			<img src="bpm9.jpg" alt="BPM">
 			</div>	
 		</div>
 <br>      
-    <li>  <strong color="#fff">  Mejora continua:</strong> <br> Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li><br>
+    <li>  <strong color="#000000">  Mejora continua:</strong> <br> Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li><br>
 		<div style="text-align: center;">	
 			<div class="imge">
  			<img src="b2.jpg" alt="BPM">
