--- a/eje.html
+++ b/eje.html
@@ -14,7 +14,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-		color: #fff;
+		color: #000000;
             background-color: #f5f5f5;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
