--- a/eje.html
+++ b/eje.html
@@ -14,7 +14,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-		color: #000000;
+		color: #fff;
             background-color: #f5f5f5;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
@@ -116,15 +116,7 @@
             text-align: center;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
-	.container 
-	{
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgb(223, 128, 0);
-		border-radius: 20px; 
-        }
+	
 .rotating-element {
   width: 800px;
   height: 30px;
@@ -223,7 +215,7 @@ object-fit: cover;
 <div class="container">
 <div class="text">
         <section>
-            <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
+            <br><h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2><br>
             <ul>
     <li> <strong color="#000000"> Higiene y limpieza:</strong> <br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
 <div style="text-align: center;">	
