--- a/sec3.html
+++ b/sec3.html
@@ -17,6 +17,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
+	color:#fff;
             background-color: #f5f5f5;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
