--- a/sec1.html
+++ b/sec1.html
@@ -1,5 +1,4 @@
 <! -- CODIGO HECHO POR ALFONSO, CARLOS Y JONATHAN -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -16,6 +15,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
+		color
             background-color: #f5f5f5;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
@@ -121,7 +121,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #F15C50;
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
