--- a/sec1.html
+++ b/sec1.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
 		color
-            background-color: #f5f5f5;
+            background-color: #fff;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
