--- a/sec1.html
+++ b/sec1.html
@@ -121,7 +121,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #F15C50;
+            background-color: #fff;
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
