--- a/sec3.html
+++ b/sec3.html
@@ -210,6 +210,7 @@ object-fit: cover;
             <a href="cal.html"><i class="fas fa-file"></i> MENÚ </a>
             <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC </a>	
         </nav>
     </div>
 </header>
