--- a/sec2.html
+++ b/sec2.html
@@ -212,6 +212,7 @@ object-fit: cover;
             <a href="cal.html"><i class="fas fa-file"></i> MENU </a>
             <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec3.html"><i class="fas fa-file"></i> TEST </a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC </a>	
         </nav>
     </div>
 </header>
