--- a/sec1.html
+++ b/sec1.html
@@ -211,6 +211,7 @@ object-fit: cover;
             <a href="cal.html"><i class="fas fa-file"></i>MENU</a>
             <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
             <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC </a>	
         </nav>
     </div>
 </header>
