--- a/cal.html
+++ b/cal.html
@@ -222,6 +222,7 @@ object-fit: cover;
             <a href="sec1.html"><i class="fas fa-file"></i>BPM</a>
             <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
             <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC </a>	
         </nav>
     </div>
 </header>
