--- a/sec4.html
+++ b/sec4.html
@@ -5,7 +5,7 @@
 <html lang="es">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿QUE ES FSC?</title>
+    <title>FSSC</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">   
@@ -219,11 +219,9 @@ object-fit: cover;
 
 <div class="container">
         <section>
-            <h2 align="center">FSC</h2>
+            <h2 align="center">FSSC</h2>
 		<p align="justify">  EDITAR.</p>        
 	</section>
-<video width="100%" height="100%" controls autoplay muted>
-    <source src="fsc1.mp4"  type="video/mp4">
 </div>
     </header>
 
