--- a/sec4.html
+++ b/sec4.html
@@ -220,7 +220,8 @@ object-fit: cover;
 <div class="container">
         <section>
             <h2 align="center">FSSC</h2>
-		<p align="justify">  EDITAR.</p>        
+		 <h3 align="center">¿QUE ES FSSC?</h3>
+		<p align="justify"> FSSC 22000 es un sistema de certificación de seguridad alimentaria basado en la norma ISO 22000, ya reconocida internacionalmente, y complementada por normas técnicas, como la ISO TS 22002-1 para la fabricación de alimentos y la ISO TS 22002-4 para la fabricación de envases. <br> <ber>La norma FSSC 22000 se dirige específicamente al sector de la fabricación de alimentos, forraje y envases, así como a los sectores de almacenamiento, transporte, catering y venta al por menor/mayor</p>        
 	</section>
 </div>
     </header>
