--- a/sec4.html
+++ b/sec4.html
@@ -17,8 +17,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-	    background-image: url('fondo11.jpg');
+            background-color: #fff;
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
 	    background-attachment: fixed; 
@@ -122,7 +121,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #98FFCD;
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
@@ -136,10 +135,11 @@
 .rotating-element:hover {
   transform: rotateY(360deg); 
     
-.container h2{
-    background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
-    -webkit-background-clip: text;
-    color: transparent;
+.h2{
+    color: #007C40;
+}
+	.h3{
+    color: #007C40;
 }
 .container img
 {
@@ -221,7 +221,7 @@ object-fit: cover;
         <section>
             <h2 align="center">FSSC</h2>
 		 <h3 align="center">¿QUE ES FSSC?</h3>
-		<p align="justify"> FSSC 22000 es un sistema de certificación de seguridad alimentaria basado en la norma ISO 22000, ya reconocida internacionalmente, y complementada por normas técnicas, como la ISO TS 22002-1 para la fabricación de alimentos y la ISO TS 22002-4 para la fabricación de envases. <br> <ber>La norma FSSC 22000 se dirige específicamente al sector de la fabricación de alimentos, forraje y envases, así como a los sectores de almacenamiento, transporte, catering y venta al por menor/mayor</p>        
+		<p align="justify">FSSC 22000 ha tenido un impacto en la seguridad alimentaria mundial durante más de 12 años. El Plan proporciona un modelo de certificación que se puede utilizar en toda la cadena de suministro de alimentos para garantizar los estándares y procesos de seguridad alimentaria. FSSC 22000 está reconocido por GFSI y sigue la descripción de la categoría de la cadena alimentaria tal como se define en ISO/TS 22003. <br> <br>La norma FSSC 22000 se dirige específicamente al sector de la fabricación de alimentos, forraje y envases, así como a los sectores de almacenamiento, transporte, catering y venta al por menor/mayor</p>        
 	</section>
 </div>
     </header>
