--- a/sec4.html
+++ b/sec4.html
@@ -17,7 +17,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background-color: #f5f5f5;
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
 	    background-attachment: fixed; 
@@ -121,7 +121,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #98FFCD;
+            background-color: #C3ECC4;
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
