--- a/sec4.html
+++ b/sec4.html
@@ -136,12 +136,8 @@
 .rotating-element:hover {
   transform: rotateY(360deg); 
     
-.h2{
-    color: #007C40;
-}
-	.h3{
-    color: #007C40;
-}
+
+	
 .container img
 {
 object-fit: cover;
@@ -220,8 +216,8 @@ object-fit: cover;
 
 <div class="container">
         <section>
-            <h2 align="center">FSSC</h2>
-		 <h3 align="center">¿QUE ES FSSC?</h3>
+            <h2 align="center" color="#007C40">FSSC</h2>
+		 <h3 align="center" color="#007C40">¿QUE ES FSSC?</h3>
 		<p align="justify">FSSC 22000 ha tenido un impacto en la seguridad alimentaria mundial durante más de 12 años. El Plan proporciona un modelo de certificación que se puede utilizar en toda la cadena de suministro de alimentos para garantizar los estándares y procesos de seguridad alimentaria. FSSC 22000 está reconocido por GFSI y sigue la descripción de la categoría de la cadena alimentaria tal como se define en ISO/TS 22003. <br> <br>La norma FSSC 22000 se dirige específicamente al sector de la fabricación de alimentos, forraje y envases, así como a los sectores de almacenamiento, transporte, catering y venta al por menor/mayor</p>        
 	</section>
 </div>
