--- a/sec4.html
+++ b/sec4.html
@@ -17,8 +17,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-		background-image: url('fondo11.jpg');
+            background-color: #7FB589;
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
 	    background-attachment: fixed; 
