--- a/sec4.html
+++ b/sec4.html
@@ -137,11 +137,9 @@
     
 
 	
-.container img
+.imge
 {
-object-fit: cover;
-  width:100%;
-  height:100%;
+aling: center;
 }
 
         /* Menú de navegación receptivo */
