--- a/pre.htm
+++ b/pre.htm
@@ -15,8 +15,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-	    background-image: url('fondo2.jpg');
+            background-color: #7FB589;
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
 	    background-attachment: fixed; 
@@ -230,7 +229,8 @@ object-fit: cover;
 </header>
 <div class="container">
         <section>
-            <h2>FSC</h2>
+                       <h2 align="center" style="color:#007C40"> <strong> FSC </strong></h2>
+
 	
 <iframe width="100%" height="350px" src="https://sway.office.com/s/muJ4L5RyyETmA7f3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>	
 </section>
