--- a/sec4.html
+++ b/sec4.html
@@ -214,11 +214,11 @@ text-align: center;}
         <section>
             <h2 align="center" style="color:#007C40"> <strong> FSSC </strong></h2>
 		 <h3 align="center" style="color:#007C40"> <strong> ¿QUE ES FSSC? </strong> </h3>
-<p align="justify">FSSC es un programa de certificación completo para los sistemas de inocuidad alimentaria basado en las normas de certificación ISO 22000 e ISO/TS 22002-1/PAS 220.
-La FSSC 22000 tiene el objetivo de convertirse en el programa de certificación de seguridad alimentaria independiente, basada en las normas ISO, aceptado por la GFSI (Iniciativa Global 
+<p align="justify"><strong>FSSC</strong> es un programa de certificación completo para los sistemas de inocuidad alimentaria basado en las normas de certificación ISO 22000 e ISO/TS 22002-1/PAS 220.
+La <strong>FSSC 22000</strong> tiene el objetivo de convertirse en el programa de certificación de seguridad alimentaria independiente, basada en las normas ISO, aceptado por la GFSI (Iniciativa Global 
 de Seguridad Alimentaria) y líder mundial para toda la cadena de suministro<br>
-<br> FSSC 22000 ha tenido un impacto en la seguridad alimentaria mundial durante más de 12 años. El Plan proporciona un modelo de certificación que se puede utilizar en toda la cadena
-de suministro de alimentos para garantizar los estándares y procesos de seguridad alimentaria. <br> <br>La norma FSSC 22000 se dirige específicamente al sector de la fabricación de 
+<br> <strong>FSSC 22000</strong> ha tenido un impacto en la seguridad alimentaria mundial durante más de 12 años. El Plan proporciona un modelo de certificación que se puede utilizar en toda la cadena
+de suministro de alimentos para garantizar los estándares y procesos de seguridad alimentaria. <br> <br><strong>La norma FSSC 22000</strong> se dirige específicamente al sector de la fabricación de 
 alimentos, forraje y envases, así como a los sectores de almacenamiento, transporte, catering y venta al por menor/mayor</p>        
 	<div class="imge">
  			<center><img src="fssc.jpg" alt="FSSC"></center>
