--- a/sec4.html
+++ b/sec4.html
@@ -213,7 +213,7 @@ text-align: center;}
 <div class="container">
         <section>
             <h2 align="center" style="color:#007C40"> <strong> FSSC </strong></h2>
-		 <h3 align="center" style="color:#007C40"> <strong> ¿QUE ES FSSC? </strong> </h3>
+		 <h3 align="center" style="color:#007C40"> <strong> ¿QUÉ ES FSSC? </strong> </h3>
 <p align="justify"><strong>FSSC</strong> es un programa de certificación completo para los sistemas de inocuidad alimentaria basado en las normas de certificación ISO 22000 e ISO/TS 22002-1/PAS 220.
 La <strong>FSSC 22000</strong> tiene el objetivo de convertirse en el programa de certificación de seguridad alimentaria independiente, basada en las normas ISO, aceptado por la GFSI (Iniciativa Global 
 de Seguridad Alimentaria) y líder mundial para toda la cadena de suministro<br>
