--- a/sec1.html
+++ b/sec1.html
@@ -218,8 +218,8 @@ object-fit: cover;
 <div class="container">
 	<div class="text">
         <section>
-		<h2 align="center"> BUENAS PRACTICAS</h2>
-		<h3 align="center">¿QUE SON LAS BUENAS PRACTICAS DE MANUFACTURA?</h3>
+		<h2 align="center"> BUENAS PRÁCTICAS</h2>
+		<h3 align="center">¿QUÉ SON LAS BUENAS PRÁCTICAS DE MANUFACTURA?</h3>
             <p align="justify" >Las Buenas Prácticas de Manufactura (BPM) son un conjunto de principios básicos cuyo objetivo es garantizar que los productos se fabriquen en condiciones sanitarias adecuadas y se disminuyan los riesgos inherentes en la producción y distribución.</p>
 		<div style="text-align: center;">	
 			<div class="imge">
