--- a/eje.html
+++ b/eje.html
@@ -213,9 +213,11 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
+	    <a href="cal.html"><i class="fas fa-file"></i>MENÚ</a>	
             <a href="sec1.html"><i class="fas fa-file"></i>BPM</a>
             <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
             <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC</a>
         </nav>
     </div>
 </header>
