--- a/sec4.html
+++ b/sec4.html
@@ -122,7 +122,7 @@
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgb(223, 128, 0);
+            box-shadow: 0 0 10px #0892a8e0;
 		border-radius: 20px; 
         }
 .rotating-element {
