--- a/sec2.html
+++ b/sec2.html
@@ -220,8 +220,8 @@ object-fit: cover;
         <section>
                        <h2 align="center" style="color:#007C40"> <strong> FSC </strong></h2>
 		<p align="justify"><strong style="color:#007C40">FSC (Consejo de Administración Forestal)</strong> Es una organización internacional sin fines de lucro que establece estándares y certifica prácticas de gestión forestal sostenible. Cuando una empresa, como Morysan en el caso de bolsas, menciona que sus productos tienen la certificación FSC, significa que los materiales utilizados para fabricar esas bolsas provienen de fuentes forestales gestionadas de manera responsable y sostenible. Esto implica que la empresa se preocupa por la conservación de los recursos forestales y el medio ambiente al utilizar materias primas certificadas por FSC.</p>
-            <p align="center">Haz clic para <a href="https://latinoamerica.fsc.org/es-ni/que%20es%20el%20FSC#:~:text=El%20Forest%20Stewardship%20Council%20(FSC,de%20los%20bosques%20del%20mundo">SABER MAS DE FSC</a> .</p>
-        <p align="center"><a href="pre.htm">PRESENTACION FSC</a> .</p>
+            <p align="center" style="color:#007C40">Haz clic para <a href="https://latinoamerica.fsc.org/es-ni/que%20es%20el%20FSC#:~:text=El%20Forest%20Stewardship%20Council%20(FSC,de%20los%20bosques%20del%20mundo">SABER MAS DE FSC</a> .</p>
+        <p align="center" style="color:#007C40"><a href="pre.htm">PRESENTACION FSC</a> .</p>
 	</section>
 <video width="100%" height="100%" controls autoplay muted>
     <source src="fsc1.mp4"  type="video/mp4">
