--- a/cal.html
+++ b/cal.html
@@ -176,8 +176,8 @@ object-fit: cover;
         .navbar a {
             display: block;
             padding: 2px 0;
-            color: #000; /* Añadido para cambiar el color del texto del enlace */
-            text-decoration: none; /* Añadido para quitar la subraya del enlace */
+            color: #000;
+            text-decoration: none; 
         }
 
         .menu-toggle {
@@ -246,7 +246,7 @@ object-fit: cover;
 		</div>
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
-        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
+        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACIÓN PARA CALIDAD</p>
     </div>
 
     <footer>
