--- a/sec3.html
+++ b/sec3.html
@@ -218,12 +218,12 @@ object-fit: cover;
     <div class="container">
         <section>
             <h2>EXÁMENES PARA DIFERENTES ÁREAS</h2>
-            <p align="justify">En esta sección de la página se pone a prueba los conocimientos de la persona a quien se le aplique. Es un cuestionario de 5 preguntas el cual está hecho en GOOGLE FORM y los resultados de la evaluación serán guardados.</p>
+            <p align="justify">En esta sección de la página se pone a prueba los conocimientos de la persona a quien se le aplique. Es un cuestionario de 5 preguntas el cual está hecho en GOOGLE FORMS y los resultados de la evaluación serán guardados.</p>
             
             <p><font color="#FF0C00">SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</font></p>        
 
             <ol>
-                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (ÁREA DE ALMACEN).</a> </li>
+                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (ÁREA DE ALMACÉN).</a> </li>
             <br>   
  		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
             <br>
