--- a/eje.html
+++ b/eje.html
@@ -146,7 +146,7 @@ object-fit: cover;
   height:100%;
 }
 
-        /* Menú de navegación receptivo */
+        /* Menú de navegación */
        .navbar {
             display: flex;
             background-color: rgba(255, 255, 255, 0.9);
@@ -224,7 +224,7 @@ object-fit: cover;
 <div class="container">
 <div class="text">
         <section>
-            <br><h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2><br>
+            <br><h2 align="center">EJEMPLOS DE BUENAS PRÁCTICAS</h2><br>
             <ul>
     <li> <strong color="#000000"> Higiene y limpieza:</strong> <br> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li><br>
 <div style="text-align: center;">	
