--- a/sec3.html
+++ b/sec3.html
@@ -223,22 +223,63 @@ object-fit: cover;
             <p><font color="#FF0C00">SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</font></p>        
 
             <ol>
-                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (ÁREA DE ALMACÉN).</a> </li>
-            <br>   
- 		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
-            <br>
-                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen (ÁREA DE DISEÑO).</a> </li>
-             <br>
-                <li><a class="button1" href="https://forms.gle/dELPviaBsrgbjRXo8">CLICK AQUI para comenzar el examen (ÁREA DE FACTURACIÓN).</a></li>
-             <br>
-                <li><a class="button1" href="https://forms.gle/6L1TQC2RtPngfN5D8">CLICK AQUI para comenzar el examen (ÁREA DE HIGIENE Y SEGURIDAD).</a> </li>
-             <br>             
-		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI para comenzar el examen (ÁREA DE IMPRESIÓN).</a> </li>
-             <br>
-                <li><a class="button1" href="https://forms.gle/SmSW4iB6RDFym3yWA">CLICK AQUI para comenzar el examen (ÁREA DE RECURSOS HUMANOS).</a> </li>
-             <br>
-		<li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI para comenzar el examen (ÁREA DE VENTAS).</a> </li>
-	     <br>
+                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE ALMACÉN).</a> </li>
+             <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="alma.png" alt="BPM">
+			</div>	
+		</div>
+<br>   
+ 		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
+             <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="Comp.png" alt="BPM">
+			</div>	
+		</div>
+<br>
+                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE DISEÑO).</a> </li>
+              <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="dis.png" alt="BPM">
+			</div>	
+		</div>
+		
+<br>
+                <li><a class="button1" href="https://forms.gle/dELPviaBsrgbjRXo8">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE FACTURACIÓN).</a></li>
+              <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="fact.png" alt="BPM">
+			</div>	
+		</div>
+<br>
+                <li><a class="button1" href="https://forms.gle/6L1TQC2RtPngfN5D8">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE HIGIENE Y SEGURIDAD).</a> </li>
+              <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="hys.png" alt="BPM">
+			</div>	
+		</div>
+<br>             
+		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE IMPRESIÓN).</a> </li>
+              <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="imp.png" alt="BPM">
+			</div>	
+		</div>
+<br>
+                <li><a class="button1" href="https://forms.gle/SmSW4iB6RDFym3yWA">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE RECURSOS HUMANOS).</a> </li>
+              <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="rh.png" alt="BPM">
+			</div>	
+		</div>
+<br>
+		<li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE VENTAS).</a> </li>
+	      <div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="vent.png" alt="BPM">
+			</div>	
+		</div>
+<br>
 
                 </ol>
 
