--- a/sec3.html
+++ b/sec3.html
@@ -146,8 +146,13 @@ object-fit: cover;
   width:100%;
   height:100%;
 }
+imge
+{
+width:100px;
+height:100px;
+}
 
-        /* Menú de navegación receptivo */
+        /* Menú de navegación */
         .navbar {
             display: flex;
             background-color: rgba(255, 255, 255, 0.9);
