--- a/sec3.html
+++ b/sec3.html
@@ -222,7 +222,7 @@ height:129px;
 
     <div class="container">
         <section>
-            <h2 align="center"> <strong> EXAMENES PARA DIFEREWNTES ÁREAS </strong></h2>
+            <h2 align="center"> <strong> EXAMENES PARA DIFERENTES ÁREAS </strong></h2>
             <p align="justify">En esta sección de la página se pone a prueba los conocimientos de la persona a quien se le aplique. Es un cuestionario de 5 preguntas el cual está hecho en GOOGLE FORMS y los resultados de la evaluación serán guardados.</p>
             
             <p><font color="#FF0C00">SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</font></p>        
