--- a/sec3.html
+++ b/sec3.html
@@ -148,8 +148,8 @@ object-fit: cover;
 }
 imge
 {
-width:100px;
-height:129px;
+width:150px;
+height:194px;
 }
 
         /* Menú de navegación */
@@ -232,7 +232,7 @@ height:129px;
 <br>             
 <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="alma.png" alt="BPM" width="100px" height="100px">
+ 			<img src="alma.png" alt="BPM">
 			</div>	
 		</div>
 <br>   
@@ -240,7 +240,7 @@ height:129px;
 <br>            
  <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="Comp.png" alt="BPM" width="100px" height="100px">
+ 			<img src="Comp.png" alt="BPM">
 			</div>	
 		</div>
 <br>
@@ -248,7 +248,7 @@ height:129px;
               <br>
 <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="dis.png" alt="BPM" width="100px" height="100px">
+ 			<img src="dis.png" alt="BPM">
 			</div>	
 		</div>
 		
@@ -257,7 +257,7 @@ height:129px;
 <br>             
  <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="fact.png" alt="BPM" width="100px" height="129px">
+ 			<img src="fact.png" alt="BPM">
 			</div>	
 		</div>
 <br>
@@ -266,14 +266,14 @@ height:129px;
 <br>
  <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="hys.png" alt="BPM" width="100px" height="129px">
+ 			<img src="hys.png" alt="BPM">
 			</div>	
 		</div>
 <br>             
 		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE IMPRESIÓN).</a> </li>
               <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="imp.png" alt="BPM" width="100px" height="129px">
+ 			<img src="imp.png" alt="BPM">
 			</div>	
 		</div>
 <br>
@@ -281,7 +281,7 @@ height:129px;
               <br>
 <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="rh.png" alt="BPM" width="100px" height="129px">
+ 			<img src="rh.png" alt="BPM">
 			</div>	
 		</div>
 <br>
@@ -289,7 +289,7 @@ height:129px;
 <br>	      
 <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="vent.png" alt="BPM" width="100px" height="129px">
+ 			<img src="vent.png" alt="BPM">
 			</div>	
 		</div>
 <br>
