--- a/sec4.html
+++ b/sec4.html
@@ -202,7 +202,7 @@ text-align: center;}
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="cal.html"><i class="fas fa-file"></i> MENU </a>
+            <a href="cal.html"><i class="fas fa-file"></i> MENÚ </a>
             <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
             <a href="sec3.html"><i class="fas fa-file"></i> TEST </a>
