--- a/sec3.html
+++ b/sec3.html
@@ -240,7 +240,7 @@ height:161px;
 <br>            
  <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="Comp.png" alt="BPM">
+ 			<img src="comp.png" alt="BPM">
 			</div>	
 		</div>
 <br>
