--- a/sec3.html
+++ b/sec3.html
@@ -234,8 +234,16 @@ height:161px;
 			<div class="imge">
  			<img src="alma.png" alt="BPM">
 			</div>	
+		</div>   
+<br>
+		<li><a class="button1" href="https://forms.gle/GKBsPYaYKSJSw7MD7">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE CALIDAD).</a> </li>
+<br>	      
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src=".png" alt="BPM">
+			</div>	
 		</div>
-<br>   
+<br>
  		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
 <br>            
  <div style="text-align: center;">	
