--- a/sec3.html
+++ b/sec3.html
@@ -230,73 +230,25 @@ height:161px;
             <ol>
                 <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE ALMACÉN).</a> </li>
 <br>             
-<div style="text-align: center;">	
-			<div class="imge">
- 			<img src="alma.png" alt="BPM">
-			</div>	
-		</div>   
-<br>
 		<li><a class="button1" href="https://forms.gle/GKBsPYaYKSJSw7MD7">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE CALIDAD).</a> </li>
-<br>	      
-<div style="text-align: center;">	
-			<div class="imge">
- 			<img src="cal.png" alt="BPM">
-			</div>	
-		</div>
 <br>
  		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
 <br>            
- <div style="text-align: center;">	
-			<div class="imge">
- 			<img src="comp.png" alt="BPM">
-			</div>	
-		</div>
-<br>
                 <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE DISEÑO).</a> </li>
-              <br>
-<div style="text-align: center;">	
-			<div class="imge">
- 			<img src="dis.png" alt="BPM">
-			</div>	
-		</div>	
 <br>
                 <li><a class="button1" href="https://forms.gle/dELPviaBsrgbjRXo8">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE FACTURACIÓN).</a></li>
 <br>             
- <div style="text-align: center;">	
-			<div class="imge">
- 			<img src="fact.png" alt="BPM">
-			</div>	
-		</div>
-<br>
                 <li><a class="button1" href="https://forms.gle/6L1TQC2RtPngfN5D8">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE HIGIENE Y SEGURIDAD).</a> </li>
-   <br>
- <div style="text-align: center;">	
-			<div class="imge">
- 			<img src="hys.png" alt="BPM">
-			</div>	
-		</div>
 <br>             
 		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE IMPRESIÓN).</a> </li>
 <br>              
-<div style="text-align: center;">	
-			<div class="imge">
- 			<img src="imp.png" alt="BPM">
-			</div>	
-		</div>
-<br>
                 <li><a class="button1" href="https://forms.gle/SmSW4iB6RDFym3yWA">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE RECURSOS HUMANOS).</a> </li>
-<br>
-<div style="text-align: center;">	
-			<div class="imge">
- 			<img src="rh.png" alt="BPM">
-			</div>	
-		</div>
 <br>
 		<li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI (o escanea el QR) para comenzar el examen (ÁREA DE VENTAS).</a> </li>
 <br>	      
 <div style="text-align: center;">	
 			<div class="imge">
- 			<img src="vent.png" alt="BPM">
+ 			<img src="pag.png" alt="BPM">
 			</div>	
 		</div>
 <br>
