--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-	    color: #fff;
-            background-color: #ffffff;
+            background-color: #f5f5f5;
 	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
@@ -120,7 +119,15 @@
             text-align: center;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
-	
+	.container 
+	{
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgb(223, 128, 0);
+		border-radius: 20px; 
+        }
 .rotating-element {
   width: 800px;
   height: 30px;
@@ -169,8 +176,8 @@ object-fit: cover;
         .navbar a {
             display: block;
             padding: 2px 0;
-            color: #000; /* Añadido para cambiar el color del texto del enlace */
-            text-decoration: none; /* Añadido para quitar la subraya del enlace */
+            color: #000;
+            text-decoration: none; 
         }
 
         .menu-toggle {
@@ -203,7 +210,7 @@ object-fit: cover;
 
 <body>
     <header class="header">
-<img src="logo.jpg" alt="Logo de la empresa">
+<img src="logo.jpg" alt="Logo de la empresa" href="https://www.morysan.com.mx/?gad_source=1&gclid=CjwKCAjwoPOwBhAeEiwAJuXRh7C7CNODjjQCHC4TONcgeg68Y9S8O1kUghLXMz9mTBxZTgqy1shCcBoCv5wQAvD_BwE">
         <h3>CALIDAD</h3> 
 
 
@@ -215,6 +222,7 @@ object-fit: cover;
             <a href="sec1.html"><i class="fas fa-file"></i>BPM</a>
             <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
             <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
+	    <a href="sec4.html"><i class="fas fa-file"></i> FSSC </a>	
         </nav>
     </div>
 </header>
@@ -231,18 +239,14 @@ object-fit: cover;
                 <li>Administrar programas de auditoría.</li>
                 <li>Implementar iniciativas de mejora.</li>
             </ol>
-</br>
-</br>
 		<div class="ima">
             <div style="text-align: center;">
                 <img src="cal.jpg" alt="BPM">
             </div>
 		</div>
-</br>
-</br>
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
-        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
+        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACIÓN PARA CALIDAD</p>
     </div>
 
     <footer>
